Basic BL template build

--- a/myaccount.conf
+++ b/myaccount.conf
@@ -1,9 +1,30 @@
 server {
 	listen 8081;
-	root /Users/guywicks/Temp/myaccount;
+	root /Users/guywicks/git/myaccount;
 	ssi on;
 
-	location / {
-		try_files $uri views/$uri.html = 404;
-	}
+#	location / {
+#		try_files $uri views/$uri.html = 404;
+#	}
+
+        location = / {
+                rewrite ^ /home redirect;
+        }
+
+	location /css 		{try_files $uri = 404;}
+	location /images 	{try_files $uri = 404;}
+	location /favicon.ico 	{try_files $uri = 404;}
+
+        location / {
+                ssi     on;
+                set     $inc $request_uri;
+                if (!-f $request_filename) {
+                        rewrite ^ /index.html last;
+                }
+                if (!-f $document_root$inc.html) {
+                        return 403;
+                }
+        }
+
+
 }
