--- a/myaccount.conf
+++ b/myaccount.conf
@@ -14,6 +14,7 @@ server {
 	location /css 		{try_files $uri = 404;}
 	location /images 	{try_files $uri = 404;}
 	location /favicon.ico 	{try_files $uri = 404;}
+	location /api 		{try_files $uri = 404;}
 
         location / {
                 ssi     on;
@@ -22,7 +23,7 @@ server {
                         rewrite ^ /index.html last;
                 }
                 if (!-f $document_root$inc.html) {
-                        return 403;
+                        return 301 /;
                 }
         }
 
