Fleshed out app. Created /account resource

--- a/myaccount.conf
+++ b/myaccount.conf
@@ -1,3 +1,8 @@
+map $request_uri $localnav {
+default 1;
+/login  0;
+}
+
 server {
 	listen 8081;
 	root /Users/guywicks/git/myaccount;
@@ -23,7 +28,7 @@ server {
                         rewrite ^ /index.html last;
                 }
                 if (!-f $document_root$inc.html) {
-                        return 301 /;
+                        return 404;
                 }
         }
 
